# eks-hybrid-nodes-sample

./: .gitignore  Makefile  README.md  README_back.md
.devcontainer/: .bashrc_private  Dockerfile  devcontainer.json  init.sh  on-create.sh
.devcontainer/etc/: .vimrc
ansible/: playbook.yml  playbook_uninstall.yml
docs/: append_hybrid_node_guide.md  delete_hybrid_node_guide.md  deploy_guide.md
plugin/albc/: README.md
plugin/calico/: README.md
plugin/calico/conf/: values.yaml
plugin/metrics-server/: README.md
plugin/nvidia-device-plugin/: README.md  values.yaml
plugin/nvidia-device-plugin/sample/: app.yaml
plugin/secret-store-csi-driver/: README.md
service/gpu-sample/: README.md  app.yaml
service/http-app/: README.md  app-cloud.yaml  app-hybrid.yaml  app-onpremise.yaml  namespace.yaml
service/keycloak/: README.md
service/netshoot/: README.md  netshoot.yaml
service/ollama/: README.md  ollama.yaml
service/ray/: README.md
service/ray/conf/: values.yaml
service/ray/connection_sample/: job.py  pyproject.toml
service/ray/cpu_sample/: job.py  pyproject.toml
service/ray/gpu_sample/: job.py  pyproject.toml
terraform/: .gitignore
terraform/components/addon/: main.tf  variables.tf
terraform/components/base/: main.tf  variables.tf
terraform/components/cluster/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/components/hybrid-nodes/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/components/hybrid-router/: main.tf  outputs.tf  variables.tf
terraform/components/load-balancer/: main.tf  outputs.tf  (+1 more)
(+62 files in other folders)
