[project]
name = "cpu-sample"
version = "0.1.0"
description = ""
authors = [
]
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ray[default] (==2.41.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
